--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -32,7 +32,7 @@
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                        <li><a href="<?php $this->url('application/client'); ?>"><?php echo $this->translate('Client') ?></a></li>
+                        <li><a href="<?php echo $this->url('application/default', array('controller' => 'client')); ?>"><?php echo $this->translate('Client') ?></a></li>
                         </ul>
                     </div><!--/.nav-collapse -->
                 </div>
