--- a/module/Application/view/application/client/add.phtml
+++ b/module/Application/view/application/client/add.phtml
@@ -5,7 +5,7 @@ $this->headTitle($title);
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 <?php
 $form = $this->form;
-$form->setAttribute('action', $this->url('client', array('action' => 'add')));
+$form->setAttribute('action', $this->url('application/default', array('controller'=> 'client', 'action' => 'add')));
 $form->prepare();
 
 echo $this->form()->openTag($form);
