--- a/module/Application/view/application/expediteur/add.phtml
+++ b/module/Application/view/application/expediteur/add.phtml
@@ -1,19 +1,11 @@
 <?php
-$title = 'Editer un client';
+$title = 'Ajouter un expediteur';
 $this->headTitle($title);
 ?>
 <h1><?php echo $this->escapeHtml($title); ?></h1>
-
 <?php
 $form = $this->form;
-$form->setAttribute('action', $this->url(
-    'application/default',
-    array(
-    	'controller'=> 'client',
-        'action' => 'edit',
-        'id'     => $this->id,
-    )
-));
+$form->setAttribute('action', $this->url('application/default', array('controller'=> 'expediteur', 'action' => 'add')));
 $form->prepare();
 
 echo $this->form()->openTag($form);
