--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -1,5 +1,5 @@
 <div class="hero-unit blow">
-  <h1>Gestion des bon</h1>
+  <h1>Gestion des bons</h1>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In at dui non massa faucibus fringilla. Quisque nunc erat, gravida nec vulputate sit amet, tincidunt commodo dolor.</p>
   <div class="nav-secondary inverse">
     <nav>
