--- a/module/Application/view/application/expediteur/delete.phtml
+++ b/module/Application/view/application/expediteur/delete.phtml
@@ -5,8 +5,7 @@ $this->headTitle($title);
 <h1><?php echo $this->escapeHtml($title); ?></h1>
 
 <p>Êtes-vous sûr de vouloir supprimer le expediteur 
-    '<?php echo $this->escapeHtml($expediteur->first_name); ?>
-    <?php echo $this->escapeHtml($expediteur->last_name); ?>'?
+    '<?php echo $this->escapeHtml($expediteur->name); ?>' ?
 </p>
 <?php
 $url = $this->url('application/default', array(
