--- a/module/Application/view/application/expediteur/index.phtml
+++ b/module/Application/view/application/expediteur/index.phtml
@@ -9,14 +9,16 @@ $this->headTitle($title);
 
 <table class="table">
 <tr>
-    <th>Prénom</th>
     <th>Nom</th>
+    <th>Code Postal</th>
+    <th>Ville</th>
     <th>&nbsp;</th>
 </tr>
 <?php foreach ($expediteurs as $expediteur) : ?>
 <tr>
-    <td><?php echo $this->escapeHtml($expediteur->first_name);?></td>
-    <td><?php echo $this->escapeHtml($expediteur->last_name);?></td>
+    <td><?php echo $this->escapeHtml($expediteur->name);?></td>
+    <td><?php echo $this->escapeHtml($expediteur->zipcode);?></td>
+    <td><?php echo $this->escapeHtml($expediteur->country);?></td>
     <td>
         <a href="<?php echo $this->url('application/default',
             array('controller'=> 'expediteur', 'action'=>'edit', 'id' => $expediteur->id));?>">Edit</a>
